--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="but"><button type="button" class="btn btn-outline-dark ms-2"onclick="displayNum(4)">4</button>
             <button type="button" class="btn btn-outline-dark"onclick="displayNum(5)">5</button>
             <button type="button" class="btn btn-outline-dark"onclick="displayNum(6)">6</button>
-            <button type="button" class="btn btn-warning">-</button>
+            <button type="button" class="btn btn-warning"onclick="displayNum(-)>-</button>
         </div>
         <div class="but"><button type="button" class="btn btn-outline-dark ms-2"onclick="displayNum(1)">1</button>
             <button type="button" class="btn btn-outline-dark"onclick="displayNum(2)">2</button>
